--- a/css/index.css
+++ b/css/index.css
@@ -4,31 +4,29 @@
 @import url("./header/header.css");
 
 body{
-  max-width: 1400px;
-  margin: auto;
-  display: flex;
   box-sizing: border-box;
-  font-family: 'Raleway';
   color: #000000;
-  font-style: normal;
   display: flex;
   flex-direction: column;
+  font-family: 'Raleway';
+  font-style: normal;
   justify-content: center;
-
+  margin: auto;
+  max-width: 1400px;
 }
 a {
-	text-decoration: none;
 	color: black;
+  text-decoration: none;
   }
 
   @media only screen and (min-width: 768px) and (max-width: 992px) {
     body{
-      /* background-color: red; */
+      background-color: red;
     }
   }
   @media only screen and (max-width: 768px){
     body{
       
-      /* background-color: yellow; */
+      background-color: yellow;
     }
   }
