--- a/css/main/main.css
+++ b/css/main/main.css
@@ -1,6 +1,6 @@
 @import "./accommodation/accommodation.css";
 @import "./activity/activity.css";
-@import url("./search/search.css");
+@import "./search/search.css";
 
 main {
 	/* background: blue; */
