--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
   }
   @media only screen and (max-width: 768px){
     body{
-      
+      overflow-x: hidden;
       background-color: yellow;
     }
   }
