--- a/css/main/search/info.css
+++ b/css/main/search/info.css
@@ -21,11 +21,26 @@
 	justify-content: center;
 	align-items: center;
 	border-radius: 0.688em;
-	color: rgba(0, 101, 252, 1);
+    border-radius: 2.688em;
+    color: rgba(0, 101, 252, 1);
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 .info .title{
     font-size: 1em;
     font-weight: 400;
     font-family: 'Raleway' !important;
     padding-left: 0.688em;
+}
+@media only screen and (max-width: 768px){
+    .info {
+        display: flex;
+        gap: 0.438em;
+        align-items: center;
+        padding-inline: 5%;
+        /* margin-bottom: 2.313em; */
+        margin-bottom: 17px;
+    }
 }
