--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ a {
 
   @media only screen and (min-width: 768px) and (max-width: 992px) {
     body{
-      background-color: red;
+      /* background-color: red; */
     }
   }
   @media only screen and (max-width: 768px){
     body{
       overflow-x: hidden;
-      background-color: yellow;
+      /* background-color: yellow; */
     }
   }
